--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "@nuxt/test-utils": "4.0.0",
     "@nuxt/ui": "4.4.0",
     "@nuxtjs/i18n": "10.2.3",
-    "@pinia/nuxt": "^0.11.3",
+    "@pinia/nuxt": "0.11.3",
     "@upstash/redis": "^1.36.2",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "nuxt": "^4.3.1",
     "nuxt-auth-utils": "0.5.28",
+    "pinia": "^3.0.4",
     "unstorage": "^1.17.4",
     "vue": "^3.5.28",
     "vue-router": "^4.6.4"
